--- a/ChalkBoard(practice)/Node/NotesNode/package.json
+++ b/ChalkBoard(practice)/Node/NotesNode/package.json
@@ -9,6 +9,7 @@
   "author": "Nathan Kinney",
   "license": "ISC",
   "dependencies": {
-    "lodash": "^4.17.10"
+    "lodash": "^4.17.10",
+    "yargs": "^4.7.1"
   }
 }
